--- a/board/src/main/resources/templates/boardview.html
+++ b/board/src/main/resources/templates/boardview.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http//www.thymleaf.org">
+<html lang="en" xmlns:th="http://www.thymleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <title>Board Detail Page</title>
@@ -14,9 +14,7 @@
 
 </style>
 <body>
-
     <h1 th:text="${board.title}">제목입니다.</h1>
     <p th:text="${board.content}">내용이 들어갈 부분입니다 </p>
-
 </body>
 </html>
