--- a/board/src/main/resources/templates/boardmodify.html
+++ b/board/src/main/resources/templates/boardmodify.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymleaf.org">>
 <head>
     <meta charset="UTF-8"/>
     <title>My Board Write Page</title>
@@ -27,10 +27,10 @@
 </style>
 <body>
 <div class="layout">
-    <form action="/board/writeprocess" method="post">
+    <form th:action="@{/board/update/{id}(id=${board.id})}" method="post">
         <input name="title" type="text" th:value="${board.title}">
-        <textarea name="content" ></textarea>
-        <button type="submit">작성</button> <!-- submit type 은 전송 타입 -->
+        <textarea name="content" th:text="${board.content}"></textarea>
+        <button type="submit">수정</button> <!-- submit type 은 전송 타입 -->
     </form>
 </div>
 </body>
